# Rust-YouTube-Downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: downloader.rs  installer.rs  main.rs  ui.rs
src/ui/: message.rs  state.rs  subscription.rs  update.rs  view.rs
