[package]
name = "youtube_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
yt-dlp ={ git = "https://github.com/boul2gom/yt-dlp", rev="e447714", features = ["tracing"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12" }
iced = { version = "0.13.1", features = ["advanced", "async-std", "image", "system", "tokio"] }
regex = "1.11.2"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
iced_futures = "0.13.2"

