[package]
name = "youtube_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
yt-dlp ={ path = "../yt-dlp", features = ["tracing"] }

tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12" }
iced = { version = "0.13.1", features = ["advanced", "async-std", "image", "system", "tokio"] }
regex = "1.11.2"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
iced_futures = "0.13.2"

